<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/save"
        android:text="@string/save"
        android:textSize="23sp"
        android:layout_marginBottom="16dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="72sp"
        android:scrollbars="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text2"
            android:hint="@string/text2"
            android:gravity="center"
            android:textSize="23sp"/>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/load"
        android:text="@string/load"/>
</LinearLayout>